--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <img src="../img/form/pl.jpg" alt="" class="img__inner">
+    <img src="img/splash.jpg" alt="" class="img__inner">
     <main>
         <form class="form__inner">
             <div class="h__inner">
@@ -30,7 +30,7 @@
                 <input type="file" accept=".txt" class="btn__file__choose" id="btn__file__choose" onchange="readFile(this)">
             </p>
 
-            <p class="p__inner">Aren't you have account? Please go on page <a href="registration.html">Registration</a></p>
+            <p class="p__inner">You are not registered yet? Please&nbsp; <a href="registration.html">register!</a></p>
         </form>
     </main>
     <script src="script.js"></script>
