--- a/registration.html
+++ b/registration.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <img src="../img/form/pl.jpg" alt="" class="img__inner">
+    <img src="img/splash.jpg" alt="" class="img__inner">
     <main>
         <form class="form__inner" action="file-reader.php" method="post">
             <div class="h__inner">
@@ -32,7 +32,7 @@
             <p class="p__inner" style="justify-content: center;">
                 <input type="submit" name="submit" value="Enter" class="btn__enter__reg" id="btn__enter__reg">
             </p>
-            <p class="p__inner">Are you have an account? Please go on page <a href="login.html">Authorization</a></p>
+            <p class="p__inner">Do you already have an account? Please&nbsp; <a href="login.html">sign in!</a></p>
             
             <div class="message"></div>
         </form>
