--- a/secret.html
+++ b/secret.html
@@ -4,11 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=	, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
-<body>
+<body class="body">
     <p>
         SECRET!!!
     </p>
+    <button class="button_add-window" onclick="createWindow()">
+        ADD WINDOW
+    </button>
+    <script src="script.js"></script>
 </body>
 </html>
